Expose datasource in dashboard.
